@@ -1,8 +1,7 @@
 package com.example.karina_project.byoungchanPage.mypage.fisher;
 
-import com.example.karina_project.byoungchanPage.mypage.factory.request.PutFactoryMyPageProfileRequest;
-import com.example.karina_project.byoungchanPage.mypage.factory.response.GetFactoryMyPageProfileResponse;
-import com.example.karina_project.byoungchanPage.mypage.factory.response.GetFactoryMyPageResponse;
+
+import com.example.karina_project.byoungchanPage.mypage.fisher.dto.GetFisherMyPageArticleDto;
 import com.example.karina_project.byoungchanPage.mypage.fisher.request.PutFisherMyPageInfoRequest;
 import com.example.karina_project.byoungchanPage.mypage.fisher.request.PutFisherMyPageArticleRequest;
 import com.example.karina_project.byoungchanPage.mypage.fisher.response.GetFisherMyPageArticleResponse;
@@ -12,26 +11,25 @@ import com.example.karina_project.domain.Article;
 import com.example.karina_project.domain.User;
 import com.example.karina_project.repository.ArticleRepository;
 import com.example.karina_project.repository.UserRepository;
+import com.example.karina_project.sehyukPage.login_page.CustomUserDetail;
+import com.example.karina_project.sehyukPage.register_page.service.FileService;
 import jakarta.persistence.EntityNotFoundException;
-import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestBody;
 
+import java.io.IOException;
 import java.util.List;
-
 import static java.util.stream.Collectors.toList;
 
 @Service
 @RequiredArgsConstructor
 public class FisherMyPageService {
+
     private final ArticleRepository articleRepository;
     private final UserRepository userRepository;
     private final MatchingRepository matchingRepository;
-    private final HttpServletResponse httpServletResponse;
-
+    private final FileService fileService;
 
     @Transactional
     public List<GetFisherMyPageResponse> getFisherMypageServiece(Long userId) {
@@ -62,26 +60,41 @@ public class FisherMyPageService {
         acceptMatching.setMatchingStatus("매칭 성공");
 
         List<Matching> matchings = matchingRepository.findAllByArticleIdAndFactoryNot(articleId, factory);
-        matchings.forEach(matching -> {matching.setMatchingStatus("매칭 실패");});
+        matchings.forEach(matching -> {matching.setMatchingStatus("매칭 마감");});
 
         return "success";
     }
 
-    @Transactional
-    public List<GetFisherMyPageArticleResponse> getFisherMyPageArticleService(Long userId) {
-        return articleRepository.findByUserIdOrderByIdDesc(userId)
-                .stream()
-                .map(GetFisherMyPageArticleResponse::from)
-                .toList();
+    public List<GetFisherMyPageArticleDto> getArticleThatIncomplete(Long userId) {
+        List<GetFisherMyPageArticleDto> incompleteArticleList = articleRepository.findByUserIdAndStatusNotOrderByIdDesc(userId, "매칭 완료").stream().map(GetFisherMyPageArticleDto::from).collect(toList());
+
+        return incompleteArticleList;
+    }
+
+    public List<GetFisherMyPageArticleDto> getArticleThatComplete(Long userId) {
+        List<GetFisherMyPageArticleDto> completeArticleList = articleRepository.findByUserIdAndStatusOrderByIdDesc(userId, "매칭 완료").stream().map(GetFisherMyPageArticleDto::from).collect(toList());
+
+        return completeArticleList;
+    }
+
+    public GetFisherMyPageArticleResponse getFisherMyPageArticleService(Long userId) {
+
+        return GetFisherMyPageArticleResponse.builder()
+                .completeArticle(getArticleThatComplete(userId))
+                .incompleteArticle(getArticleThatIncomplete(userId))
+                .build();
     }
 
     @Transactional
-    public String editFisherMyPageArticleService(PutFisherMyPageArticleRequest request) {
+    public String editFisherMyPageArticleService(PutFisherMyPageArticleRequest request, String thumbnailUrl) throws IOException {
         Article article = articleRepository.findById(request.getArticleId()).orElseThrow(() -> new EntityNotFoundException("해당 게시글이 없습니다.. id=" + request.getArticleId()));
+        fileService.deleteFile(article.getThumbnail());
+
         article.setGetDate(request.getGetDate());
         article.setGetTime(request.getGetTime());
         article.setLimitDate(request.getLimitDate());
         article.setLimitTime(request.getLimitTime());
+        article.setThumbnail(thumbnailUrl);
 
         return "success";
     }
